--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
 
   redis:
     image: redis:alpine
-    ports:
-      - "6379:6379"
+#    ports:
+#      - "6379:6379"
 
   report:
     build:
@@ -15,22 +15,25 @@ services:
       - "8000:8000"
     depends_on:
       - postgres
+      - redis
     volumes:
       - .:/usr/src/app
-    command: bash -c "wait-for-it 64.226.65.160:5432 -- uvicorn report_fastapi:app --host 0.0.0.0 --port 8000"
+    env_file:
+      - .env.docker
+    command: sh -c "uvicorn services.report_fastapi:app --host 0.0.0.0 --port 8000"
 
   app:
     build:
       context: .
       dockerfile: Dockerfile
+    volumes:
+      - .:/usr/src/app
     env_file:
       - .env.docker
     depends_on:
       - postgres
       - redis
-    volumes:
-      - .:/usr/src/app
-    command: bash -c "wait-for-it 64.226.65.160:5432 -- python app.py"
+    command: python src/bot/app.py
 
   postgres:
     image: postgres:latest
@@ -38,8 +41,8 @@ services:
       POSTGRES_DB: financial_records
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-    ports:
-      - "5432:5432"
+#    ports:
+#      - "5432:5432"
     volumes:
       - app_db:/var/lib/postgresql/data
 
